# p-abc

./: CMakeLists.txt  README.md  setupscript.sh
include/: Dpabc.h  Dpabc_types.h
lib/pfecCwrapper/: CMakeLists.txt
lib/pfecCwrapper/include/: Zp.h  g1.h
lib/pfecCwrapper/src/Miracl_BLS12381_32b/: Zp.c  g1.c
lib/pfecCwrapper/src/Miracl_BLS12381_64b/: Zp.c  g1.c
lib/pfecCwrapper/src/example/: main_test.c
lib/pfecCwrapper/test/: testG1.c  testG2.c  testZp.c
src/PSMS/: Dpabc.c  Dpabc_types.c  Dpabc_utils.c  types_impl.h
src/example/: main.c
test/: main.c
